<?xml version="1.0"?>
<package format="3">
  <name>flex_sync</name>
  <version>2.0.0</version>
  <description>ros2 package for syncing variable number of topics</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache2</license>

  <!-- ROS2 dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ament_cmake_clang_format</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>geometry_msgs</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
